WebKit2 should exit auto scrolling mode when losing focus https://bugs.webkit.org/show_bug.cgi?id=49209

Reviewed by Jon Honeycutt.

When a page loses focus, make sure that we stop the autoscroll timer, which exits pan scrolling mode. We
don't want to automatically scroll when a page doesn't have focus.

Updated manual-tests/autoscroll.html with instructions to test this bug.

* manual-tests/autoscroll.html:
* page/FocusController.cpp:
(WebCore::FocusController::setFocused):



Canonical link: https://commits.webkit.org/64517@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74170 268f45cc-cd09-0410-ab3c-d52691b4dbfc