WebCore/page/FocusController.cpp
@@ -130,6 +130,9 @@ void FocusController::setFocused(bool focused)
     
     m_isFocused = focused;
 
+    if (!m_isFocused)
+        focusedOrMainFrame()->eventHandler()->stopAutoscrollTimer();
+
     if (!m_focusedFrame)
         setFocusedFrame(m_page->mainFrame());
 
